--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
 
         <!-- Add your JS here -->
      <script src="js/app.js">   </script>
+     <script src="js/Employee.js">   </script>
     </body>
 </html>
